<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fermundev.mysportsscores.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_results"
        android:name="com.fermundev.mysportsscores.ui.results.ResultsFragment"
        android:label="@string/menu_results"
        tools:layout="@layout/fragment_results" />

    <fragment
        android:id="@+id/nav_players"
        android:name="com.fermundev.mysportsscores.ui.players.PlayersFragment"
        android:label="@string/menu_players"
        tools:layout="@layout/fragment_players" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.fermundev.mysportsscores.ui.gallery.GalleryFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.fermundev.mysportsscores.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>